src/objects/TrackLapRecord__mdt.object
<CustomObject>
    <fields>
        <fullName>DriverName__c</fullName>
        <label>Driver Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Track Lap Record</label>
    <pluralLabel>Track Lap Records</pluralLabel>
</CustomObject>